Fix z-indexes

--- a/resources/assets/sass/components/_LeftNav.scss
+++ b/resources/assets/sass/components/_LeftNav.scss
@@ -9,7 +9,7 @@
   overflow: scroll;
   max-height: 100%;
 
-  z-index: 2;
+  z-index: z('leftNav');
 
   &__title {
     padding: .75rem 1.5rem .75rem rem(59px);
