--- a/resources/assets/sass/components/_Modal.scss
+++ b/resources/assets/sass/components/_Modal.scss
@@ -82,7 +82,7 @@
     .modal-footer {
       margin-top: auto;
       text-align: right;
-      //background-color: $ui-03;
+      background-color: $ui-01;
       margin-left: rem(-24px);
       margin-right: rem(-24px);
       padding: rem(24px) rem(24px);
